# yt-dlp-youtube-oauth2

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: release.yml
yt_dlp_plugins/extractor/: sample.py  sample_override.py  youtubeoauth.py
yt_dlp_plugins/postprocessor/: sample.py
