[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yt-dlp-youtube-oauth2"
version = "2024.09.14"
readme = "README.md"
requires-python = ">=3.8"
license = "Unlicense"
keywords = ["yt-dlp", "yt-dlp-plugin"]
authors = [
  { name = "coletdjnz", email = "coletdjnz@protonmail.com" },
]
dependencies = []

[tool.hatch.env.default]
installer = "uv"
path = ".venv"

[tool.hatch.build.targets.wheel]
packages = ["yt_dlp_plugins"]

[tool.hatch.metadata]
allow-direct-references = true